iscsi-mount.yml
apiVersion: v1
kind: Pod
metadata:
  name: iscsi-pod
spec:
  containers:
    - name: iscsi-container
      image: alpine
      command:
        - sleep
        - "3600"
      volumeMounts:
        - name: iscsi-volume
          mountPath: /mnt/iscsi
      securityContext:
        capabilities:
          add:
            - SYS_ADMIN
  volumes:
    - name: iscsi-volume
      iscsi:
        targetPortal: 10.0.0.1:3260
        iqn: iqn.2018-11.com.example:iscsi-volume
        lun: 0
        fsType: ext4
        readOnly: false
        chapAuthDiscovery: true
        chapAuthSession: true
        secretRef:
          name: iscsi-secret
  secrets:
    - name: iscsi-secret
      data:
        username: c2VjcmV0LXVzZXJuYW1lLWJ5dGVz
        password: c2VjcmV0LXBhc3N3b3JkLWJ5dGVz
